<resources>
    <string name="app_name">TikTokDemo</string>
    <string name="cancel">取消</string>
    <string name="delete">删除</string>
    <string name="edit">编辑</string>
    <string name="save">保存</string>
    <string name="done">完成</string>
    <string name="close">关闭</string>

    <string name="tidal_pat_upload_se_soul_out">灵魂出窍</string>
    <string name="tidal_pat_upload_se_time_back">时光倒流</string>
    <string name="tidal_pat_upload_se_un_state">无</string>

    <string name="tidal_pat_filter_original">原图</string>
    <string name="tidal_pat_filter_bw_03">黑白</string>
    <string name="tidal_pat_filter_cf_17">鲜艳</string>
    <string name="tidal_pat_filter_cf_19">温暖</string>
    <string name="tidal_pat_filter_fm_05">初夏</string>
    <string name="tidal_pat_filter_fm_10">时光</string>
    <string name="tidal_pat_filter_fs_10">小清新</string>
    <string name="tidal_pat_filter_ins_02">怀旧</string>
    <string name="tidal_pat_filter_mod_09">摩登</string>
    <string name="tidal_pat_filter_re_03">复古风</string>
    <string name="tidal_pat_filter_sf_03">柔和</string>


    <string name="tidal_pat_hui">潮人汇</string>
    <string name="tidal_pat_music">人气音乐</string>
    <string name="tidal_pat_click_more">点击查看\n更多内容</string>
    <string name="nearby_tidal_pat">附近潮人</string>
    <string name="new_tidal_pat">新人新潮</string>
    <string name="hipsters_play_number">播放次数：</string>
    <string name="populairy_music_use_times">使用次数：</string>
    <string name="news_hipster_content">这些都是嘿吼的最新潮人,观看视频膜拜下吧~</string>
    <string name="tidal_pat_hint">喜欢就要说出来</string>
    <string name="tidal_pat_cut_music">剪音乐</string>
    <string name="tidal_pat_cover_selected">选封面</string>
    <string name="tidal_pat_volume">音量</string>
    <string name="tidal_pat_special_effects">特效</string>
    <string name="tidal_pat_beauty">美颜</string>
    <string name="tidal_pat_beauty_open">美颜开</string>
    <string name="tidal_pat_beauty_close">美颜关</string>
    <string name="tidal_pat_filter">滤镜</string>
    <string name="tidal_pat_count_down">倒计时</string>
    <string name="tidal_pat_cut_audio_hint">左右拖动声谱剪取音乐</string>
    <string name="tidal_pat_record_delete_video_out">删除内容并退出</string>
    <string name="tidal_pat_record_reset">重新拍摄</string>
    <string name="tidal_pat_record_reset_recording">重新录制</string>
    <string name="tidal_pat_record_save_draft">保存草稿</string>
    <string name="tidal_pat_record_share_qzone">QQ空间</string>
    <string name="tidal_detail_selection">精选</string>
    <string name="tidal_detail_save_draft_succeed">已保存至草稿箱</string>
    <string name="tidal_detail_upload_not_audio">视频原声</string>
    <string name="tidal_detail_upload_video_not_find">文件不存在</string>
    <string name="tidal_pat_record_check_audio_permission">请检查录音权限</string>
    <string name="tidal_pat_uploading">上传中</string>
    <string name="tidal_pat_uploading_">上传中...</string>
    <string name="tidal_pat_upload_succeed">发布成功</string>
    <string name="tidal_pat_upload_fail">发布失败了，请重试</string>
    <string name="tidal_pat_upload_succeed_add">+50积分</string>
    <string name="tidal_pat_upload_succeed_add_format">+%d积分</string>
    <string name="tidal_pat_upload_title_sensitive">标题包含敏感词</string>
    <string name="tidal_pat_upload_remove_hint">删除该视频？</string>
    <string name="tidal_pat_record_combining">合成中...</string>
    <string name="tidal_pat_record_music_cutting">裁剪中...</string>
    <string name="tidal_pat_draft_title">草稿箱</string>
    <string name="tidal_pat_draft_clear_tip">清空</string>
    <string name="tidal_pat_draft_edit_tip">编辑</string>
    <string name="tidal_pat_draft_clear_msg">确认清空草稿文件?</string>
    <string name="tidal_pat_draft_delete_msg">确定删除该草稿文件?</string>
    <string name="tidal_pat_draft_no_title_tip">暂无标题</string>
    <string name="music_draft_no_title_tip">暂无歌曲名称</string>
    <string name="tidal_pat_draft_local_video_tip">本地上传视频不支持编辑</string>
    <string name="tidal_pat_give_up_alter_hint">放弃编辑？</string>
    <string name="tidal_pat_delete_succeed">删除成功</string>
    <string name="tidal_pat_delete_fail">删除失败了</string>
    <string name="tidal_pat_record_unfinished_hint">你有未编辑完成的视频，是否继续？</string>
    <string name="recording_studio_unfinished_hint">你有未完成的录音，是否继续？</string>
    <string name="tidal_pat_record_original_sound">原声</string>
    <string name="tidal_pat_record_background_music">配乐</string>
    <string name="tidal_pat_music_share_title_format">我在嘿吼参加@%1$s....超多有趣Hiphop说唱，赶快来参加</string>
    <string name="tidal_pat_music_share_flag">嘿吼-Hiphop说唱社区</string>
    <string name="tidal_pat_save_to_local">同时保存到本地</string>
    <string name="edit_text_max_length_hint">最多只能输入%1$d个字符</string>
    <string name="edit_text_max_length_hint_not_line_feed">不支持换行</string>
    <string name="tidal_pat_add_topic">添加挑战</string>
    <string name="tidal_pat_add_call_friend">\&#064;&#160;好友</string>
    <string name="tidal_pat_upload_fail_save">上传失败，已保存到草稿箱</string>
    <string name="tidal_pat_upload_fail_hint">上传失败</string>
    <string name="tidal_pat_upload_fail_because_uploading">你有作品正在上传，请上传成功后再发布</string>
    <string name="tidal_pat_record_delete_video_confirm">确认删除上一段视频？</string>
    <string name="tidal_pat_record_give_up_upload">放弃发布？</string>
    <string name="tidal_pat_upload_call_friend_exist">你已经\&#064;过他了</string>
    <string name="tidal_pat_upload_call_friend_max_count">最多只能\&#064;%1$d个人哦~</string>
    <string name="tidal_pat_upload_call_friend_cant_me">不能\&#064;自己</string>
    <string name="tidal_pat_upload_position_selected_hint">选择位置后，按住使用效果</string>
    <string name="tidal_pat_upload_time_back_hint">点击选择时间特效</string>
    <string name="tidal_pat_upload_se_filter">滤镜特效</string>
    <string name="tidal_pat_upload_se_time">时间特效</string>
    <string name="tidal_pat_upload_play_error">播放出现异常，请重试</string>
    <string name="tidal_pat_upload_combine_error">视频合成失败了，请重试</string>
    <string name="tidal_pat_upload_clear_se_hint">是否清除已添加特效？</string>
    <string name="tidal_pat_upload_clear_se_exit_hint">继续拍摄之前的特效会被清空，是否继续拍摄？</string>
    <string name="tidal_pat_upload_clear_se_remove">撤销</string>
    <string name="tidal_pat_record_time_15">15秒</string>
    <string name="tidal_pat_record_time_120">2分钟</string>
    <string name="tidal_pat_record_time_120_not_background_music">2分钟视频无背景音乐</string>
    <string name="tidal_pat_record_time_second">秒</string>
    <string name="tidal_pat_record_change_time_mode_hint">正在拍摄中，请勿切换</string>

    <string name="tidal_pat_crop_video_edit_hint">本地上传视频不支持继续拍摄，是否放弃编辑？</string>
    <string name="tidal_pat_crop_video_selected_time">已选取%1$d秒</string>
    <string name="tidal_pat_crop_video_make_data_fail">解析数据出现错误，暂不支持该视频</string>
    <string name="tidal_pat_crop_video_make_data_format_fail">暂不支持该视频格式</string>
    <string name="tidal_pat_crop_video_make_loading">奋力处理中...</string>
    <string name="personal_show_record_video_combine_fail">合成失败了,请重试</string>
    <string name="personal_show_upload_video">保存到本地</string>
    <string name="personal_show_upload_video_delete">删除</string>
    <string name="personal_show_please_input_video_title">请输入标题</string>
    <string name="personal_show_combining_hint">合成中，请稍等...</string>
    <string name="personal_show_music_download">下载</string>
    <string name="personal_show_music_download_done">已下载</string>
    <string name="personal_show_music_selector_disposing">正在处理...</string>
    <string name="personal_show_upload_video_personal_show">预览</string>
    <string name="personal_show_camera_open_fail">操作失败，请检查权限</string>
    <string name="personal_show_download_fail_not_net">网络状态不佳，请查看设置</string>
    <string name="personal_loading">正在加载...</string>
    <string name="home_data_error">数据出现异常，请重试</string>
    <string name="home_play_time_minute">分</string>
    <string name="home_play_time_hour">时</string>
    <string name="home_play_time_sec">秒</string>
    <string name="home_number_from_w">%s万</string>
    <string name="home_number_from_x">%s+</string>
    <string name="edit_info_save">本地上传</string>
    <string name="edit_info_modify_head">拍照上传</string>
    <string name="permission_prohibit_tip">您已禁止%s权限，请进入系统设置重新开启!</string>
    <string name="permission_default">相关</string>
    <string name="permission_location">定位</string>
    <string name="permission_camera">照相机</string>
    <string name="permission_record">录音</string>
    <string name="permission_phone">通话</string>
    <string name="permission_storage">读写sd卡</string>
    <string name="cache_delete_fail_hint">删除失败了</string>
</resources>
